# EEGLES_Firmware

./: .gitignore  CMakeLists.txt  README.md  fourier.py  graph.py  grapher.py  test.py  todo_for_next_version.txt
.cache/clangd/index/: crc.c.543AF3328C68E047.idx  crc.h.E020C6569AE0D00F.idx  demo_logging.c.870422AFBB5DF571.idx  diskio.h.46A636EC0E19F1EE.idx  f_util.c.7670A40001858F49.idx  f_util.h.2CFC601853C6ECC9.idx  ff.c.46D9CD661DB31330.idx  ff.h.4AF9EB100A3159BE.idx  ff_stdio.c.E0512CEE67059A67.idx  ff_stdio.h.C66B876C4D65EFC3.idx  ffconf.h.F9B5BE8F0C6B0718.idx  ffsystem.c.ACB9FEDAF6CB5E97.idx  ffunicode.c.3D6A838A48CFD5CD.idx  glue.c.04F09E7CC82716B9.idx  hw_config.h.C23F3EFAE40B8711.idx  main.c.CCE0FC8E4C0BE88F.idx  my_debug.c.36535A76DAAA44A0.idx  my_debug.h.BDDF9080533AC347.idx  rtc.c.FB8CAE0693B04C8E.idx  rtc.h.480DF5E08C31794C.idx  sd_card.c.2B23860D8B6E5485.idx  sd_card.h.E6B2A0EA009FCF0B.idx  sd_spi.c.8EC07467BEA6F9F4.idx  sd_spi.h.12F5AF040A80D1ED.idx  spi.c.F8A93025EE9E311C.idx  spi.h.784B67D957082209.idx  util.h.43E38BC6DB8427A3.idx
ESP12F_Firmware/: ESP12F_Firmware.ino
TalonFirmware/: CMakeLists.txt  main.c  stuff.txt
blink_test/: CMakeLists.txt
